// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jobutil > all > matches job 1`] = `
{
  "__input": [
    [],
  ],
  "__task": GeneratedTaskAll {},
  Symbol(workelement.slugify): [Function],
}
`;

exports[`jobutil > all > matches job 2`] = `
{
  "__input": [
    [
      {
        "__input": [
          {
            "func": [Function],
            "name": "returnhi",
            Symbol(workelement.slugify): [Function],
          },
        ],
        "__task": GeneratedTaskCall {},
        Symbol(workelement.slugify): [Function],
      },
    ],
  ],
  "__task": GeneratedTaskAll {},
  Symbol(workelement.slugify): [Function],
}
`;

exports[`jobutil > all > matches job 3`] = `
{
  "__input": [
    [
      {
        "__input": [
          {
            "content": "{}",
            Symbol(workelement.slugify): [Function],
          },
        ],
        "__task": GeneratedTaskFromJSON {},
        Symbol(workelement.slugify): [Function],
      },
    ],
  ],
  "__task": GeneratedTaskAll {},
  Symbol(workelement.slugify): [Function],
}
`;

exports[`jobutil > all > matches output 1`] = `[]`;

exports[`jobutil > all > matches output 2`] = `
[
  "hi",
]
`;

exports[`jobutil > all > matches output 3`] = `
[
  {},
]
`;

exports[`jobutil > all > matches slug 1`] = `
SlugBase {
  Symbol(workelement.slug): "all([])",
}
`;

exports[`jobutil > all > matches slug 2`] = `
SlugBase {
  Symbol(workelement.slug): "all([call()])",
}
`;

exports[`jobutil > all > matches slug 3`] = `
SlugBase {
  Symbol(workelement.slug): "all([fromJSON()])",
}
`;

exports[`jobutil > call > matches job 1`] = `
{
  "__input": [
    {
      "func": [Function],
      "name": "returnhi",
      Symbol(workelement.slugify): [Function],
    },
  ],
  "__task": GeneratedTaskCall {},
  Symbol(workelement.slugify): [Function],
}
`;

exports[`jobutil > call > matches job 2`] = `
{
  "__input": [
    {
      "func": [Function],
      "name": "JSON.parse",
      Symbol(workelement.slugify): [Function],
    },
    {
      "content": "{}",
      Symbol(workelement.slugify): [Function],
    },
  ],
  "__task": GeneratedTaskCall {},
  Symbol(workelement.slugify): [Function],
}
`;

exports[`jobutil > call > matches output 1`] = `"hi"`;

exports[`jobutil > call > matches output 2`] = `{}`;

exports[`jobutil > call > matches slug 1`] = `
SlugBase {
  Symbol(workelement.slug): "call()",
}
`;

exports[`jobutil > call > matches slug 2`] = `
SlugBase {
  Symbol(workelement.slug): "call(,)",
}
`;

exports[`jobutil > func 1`] = `
SlugBase {
  Symbol(workelement.slug): "func#returnhi#md5#kW2db_QbhZ_M_Pk9SSOeYw",
}
`;

exports[`jobutil > json > matches job 1`] = `
{
  "__input": [
    {
      "content": "{}",
      Symbol(workelement.slugify): [Function],
    },
  ],
  "__task": GeneratedTaskFromJSON {},
  Symbol(workelement.slugify): [Function],
}
`;

exports[`jobutil > json > matches job 2`] = `
{
  "__input": [
    {
      "content": "[]",
      Symbol(workelement.slugify): [Function],
    },
  ],
  "__task": GeneratedTaskFromJSON {},
  Symbol(workelement.slugify): [Function],
}
`;

exports[`jobutil > json > matches output 1`] = `{}`;

exports[`jobutil > json > matches output 2`] = `{}`;

exports[`jobutil > json > matches slug 1`] = `
SlugBase {
  Symbol(workelement.slug): "fromJSON()",
}
`;

exports[`jobutil > json > matches slug 2`] = `
SlugBase {
  Symbol(workelement.slug): "fromJSON()",
}
`;

exports[`jobutil > source 1`] = `
SlugBase {
  Symbol(workelement.slug): "source(md5#mZFLkyvTelC5g8XnyQrpOw)",
}
`;
